# MetaAdsMCP

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  PLAN-phase1.md  PROJECT.md  README.md  TASKS.md  pyproject.toml
.claude/: settings.json
docs/: phase6-asset-upload.md  testing.md
src/meta_ads_mcp/: __init__.py  __main__.py  client.py  config.py  formatting.py  models.py  server.py
src/meta_ads_mcp/tools/: __init__.py  _insights_helpers.py  _write_helpers.py  accounts.py  ads.py  adsets.py  assets.py  audiences.py  campaigns.py  creatives.py  insights.py
tests/: conftest.py  test_advanced_features.py  test_annotations.py  test_client.py  test_client_assets.py  test_client_write.py  test_client_write_creatives.py  test_config.py  test_diagnostics.py  test_error_handling.py  test_formatting.py  test_integration_workflows.py  test_live.py  test_models.py  test_server.py  test_tools_accounts.py  test_tools_ads.py  test_tools_adsets.py  test_tools_assets.py  test_tools_audiences.py  test_tools_campaigns.py  test_tools_creatives.py  test_tools_insights.py  test_tools_write_ads.py  test_tools_write_adsets.py  test_tools_write_audiences.py  test_tools_write_campaigns.py  test_tools_write_creatives.py  test_write_helpers.py
