[project]
name = "meta-ads-mcp"
version = "0.1.0"
description = "MCP server wrapping the Meta (Facebook) Ads API for agency/multi-client ad management"
authors = [{name = "Tom Long"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26",
    "facebook-business>=25.0",
    "pydantic>=2.0",
    "python-decouple>=3.8",
]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14",
    "pytest-cov>=7.0",
    "black>=26.0",
    "ruff>=0.15",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_ads_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["decouple", "facebook_business.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["meta_ads_mcp.tools.*"]
disable_error_code = ["type-arg"]
